# video-transcription

./: .gitignore  pyproject.toml
src/: transcribe.py
