[project]
authors = [
  {name = "peppapig450", email = "peppapig450@pm.me"},
]
dependencies = ["whisperx (>=3.3.1,<4.0.0)"]
description = ""
name = "videotranscripts"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]
